@@ -148,14 +148,14 @@ public class CustomControllerTest {
 
         PageRequest pageRequest = PageRequest.of(1,10);
 
-        TaskEntity taskEntity = buildDefaultTask();
+        TaskEntity taskEntity1 = buildDefaultTask();
+        TaskEntity taskEntity2 = buildDefaultTask();
 
         given(taskRepository.findAll(any(), eq(pageRequest)))
-                .willReturn(new PageImpl<>(Collections.singletonList(taskEntity), pageRequest, 11));
+                .willReturn(new PageImpl<>(List.of(taskEntity1, taskEntity2), pageRequest, 11));
 
         //when
-        MvcResult mvcResult = mockMvc.perform(get("/abpm/tasks?page=1&size=10",
-                taskEntity.getId())
+        MvcResult mvcResult = mockMvc.perform(get("/abpm/tasks?page=1&size=10")
                 .accept(MediaTypes.HAL_JSON_VALUE))
                 //then
                 .andExpect(status().isOk())
